tests/dataset/tpc-ds/compiler/erlang/q30.error
run: exit status 127
escript: exception error: bad key: wr_return_amt
  in function  map_get/2
     called as map_get(wr_return_amt,
                       #{wr =>
                             #{wr_returning_customer_sk => 1,
                               wr_returned_date_sk => 1,wr_return_amt => 50,
                               wr_returning_addr_sk => 1},
                         d => #{d_date_sk => 1,d_year => 2000},
                         ca => #{ca_address_sk => 1,ca_state => "CA"}})
     *** argument 1: not present in map
  in call from q30_erl__escript__1752__561078__256047__8964:'-main/1-lc$^5/1-1-'/1 (/tmp/q30.erl, line 10)
  in call from q30_erl__escript__1752__561078__256047__8964:'-main/1-lc$^4/1-0-'/1 (/tmp/q30.erl, line 10)
  in call from q30_erl__escript__1752__561078__256047__8964:main/1 (/tmp/q30.erl, line 10)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
